Added the ability to automatically rename files

--- a/vcp.1
+++ b/vcp.1
@@ -111,6 +111,9 @@ Prints version and exits.
 \fB\-u\fR
 Files present with newer time stamp and same size are not copied.
 .TP
+\fB\-c\fR
+When an existing file is found changes 'name' to 'name_'.
+.TP
 \fB\-h\fR
 Prints detailed usage and exits.
 .SH FILES
